--- a/test/fixtures/periods.yml
+++ b/test/fixtures/periods.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  company: one
-  start_date: 2023-04-13
-  end_date: 2023-04-13
+period_one:
+  company: company_one
+  start_date: 2023-01-01
+  end_date: 2023-01-31
 
-two:
-  company: two
-  start_date: 2023-04-13
-  end_date: 2023-04-13
+period_two:
+  company: company_two
+  start_date: 2023-01-01
+  end_date: 2023-01-31
