--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  lastname: MyString
-  username: MyString
-  password_digest: MyString
+user_one:
+  name: UserOne
+  lastname: UserOne
+  username: user_one
+  password_digest: abc123
 
-two:
-  name: MyString
-  lastname: MyString
-  username: MyString
-  password_digest: MyString
+user_two:
+  name: UserTwo
+  lastname: UserTwo
+  username: user_two
+  password_digest: abc123
